--- a/src/components/layout/Footer/styles.scss
+++ b/src/components/layout/Footer/styles.scss
@@ -6,7 +6,7 @@ footer {
   bottom: $margin-screen-edge-vertical;
   width: 100%;
   text-align: right;
-  z-index: $level-layer-high;
+  z-index: $level-layer-middle;
 
   small {
     display: inline-block;
